<resources>
    <string name="app_name">SGG Books</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="choose_your_course">Choose Your Course</string>
    <string name="b_sc">B.Sc</string>
    <string name="bachelor_of_science">Bachelor of Science</string>
    <string name="add_new_course">Add New Course</string>
    <string name="select_your_year">Select Your Year</string>
    <string name="select_optional">Select Optional</string>
    <string name="year_wise">Year Wise</string>
    <string name="semester_wise">Semester Wise</string>
    <string name="choose_your_subject">Choose Your Subject</string>
    <string name="syllabus">Syllabus</string>
    <string name="solved">Solved</string>
    <string name="unsolved">UnSolved</string>
    <string name="notes">Notes</string>
    <string name="books">Books</string>
    <string name="pyq">PYQ</string>
    <string name="fab">fab</string>
    <string name="choose_year">Choose Year</string>
    <string name="choose_semester">Choose Semester</string>
    <string name="copyright">Copyright</string>
    <string name="app_info">App Info</string>
    <string name="download_fail">Download Fail</string>
    <string name="loading">  Loading...</string>
    <string name="admob_app_id">ca-app-pub-5557597427790866~5173978667</string>
    <string name="admob_banner_id">ca-app-pub-5557597427790866/9139228110</string>
    <string name="enter_full_screen_mode">enter Full Screen Mode</string>
    <string name="no_data_found_n_try_again">No Data Found \n Try Again</string>


</resources>